After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 670638 - 3.3.90 still includes farsight headers
3.3.90 still includes farsight headers
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: General
3.3.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2012-02-22 21:43 UTC by Dominique Leuenberger
Modified: 2012-02-23 08:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch that fixes this (1.06 KB, patch)
2012-02-22 21:57 UTC, Gert Kulyk
committed Details | Review

Description Dominique Leuenberger 2012-02-22 21:43:07 UTC
While building empathy 3.3.90 (in a chroot), I observer that there are still references to farsight include headers. configure.ac dropped all the checks for farsight and switched entirely to farstream.

Build failure (without farsight available):

In file included from empathy-call-factory.c:36:0:
empathy-call-handler.h:27:46: fatal error: gst/farsight/fs-conference-iface.h: No such file or directory
compilation terminated.
make[2]: *** [empathy_call-empathy-call-factory.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from empathy-call-handler.c:36:0:
empathy-call-handler.h:27:46: fatal error: gst/farsight/fs-conference-iface.h: No such file or directory
compilation terminated.
make[2]: *** [empathy_call-empathy-call-handler.o] Error 1
In file included from empathy-call-window.h:27:0,
                 from empathy-call.c:43:
empathy-call-handler.h:27:46: fatal error: gst/farsight/fs-conference-iface.h: No such file or directory
compilation terminated.
make[2]: *** [empathy_call-empathy-call.o] Error 1
In file included from empathy-call-window.h:27:0,
                 from empathy-call-window-fullscreen.h:26,
                 from empathy-call-window-fullscreen.c:25:
empathy-call-handler.h:27:46: fatal error: gst/farsight/fs-conference-iface.h: No such file or directory
compilation terminated.
make[2]: *** [empathy_call-empathy-call-window-fullscreen.o] Error 1
empathy-call-window.c:41:52: fatal error: gst/farsight/fs-element-added-notifier.h: No such file or directory
compilation terminated.
make[2]: *** [empathy_call-empathy-call-window.o] Error 1
make[2]: Leaving directory `/home/abuild/rpmbuild/BUILD/empathy-3.3.90/src'
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory `/home/abuild/rpmbuild/BUILD/empathy-3.3.90'
make: *** [all] Error 2
error: Bad exit status from /var/tmp/rpm-tmp.xl6a0e (%build)

====

A grep over the 3.3.90 source shows four references to farsight headers:
empathy-3.3.90> grep "#include.*farsight" * -r
src/empathy-video-widget.c:#include <gst/farsight/fs-element-added-notifier.h>
src/empathy-call-handler.h:#include <gst/farsight/fs-conference-iface.h>
src/empathy-call-window.c:#include <gst/farsight/fs-element-added-notifier.h>
src/empathy-call-window.c:#include <gst/farsight/fs-utils.h>
Comment 1 Gert Kulyk 2012-02-22 21:57:30 UTC
Created attachment 208220 [details] [review]
Patch that fixes this

This patch should do the trick, at least it did for me.
Comment 2 Dominique Leuenberger 2012-02-22 22:08:39 UTC
(In reply to comment #1)
> Created an attachment (id=208220) [details] [review]
> Patch that fixes this
> 
> This patch should do the trick, at least it did for me.

Thanks... That seems indeed really to be all that's needed... I should have read up on the fact that farstream is fully API compatible.
Comment 3 Olivier Crête 2012-02-22 22:19:54 UTC
Review of attachment 208220 [details] [review]:

It's not fully API compatible.. but this bit is.
Comment 4 Guillaume Desmottes 2012-02-23 08:39:15 UTC
Thanks for the patch!