Stop using Farsight2 headers

https://bugzilla.gnome.org/show_bug.cgi?id=670638