src/empathy-call-handler.h
@@ -24,7 +24,7 @@
 #include <glib-object.h>
 
 #include <gst/gst.h>
-#include <gst/farsight/fs-conference-iface.h>
+#include <farstream/fs-conference.h>
 
 #include <telepathy-glib/telepathy-glib.h>
 
